@@ -223,6 +223,7 @@
 4404 = "Sanat Yahya"
 4405 = "Sanat Bulus"
 4408 = "Sintinyalah"
+4412 = "Hisn at-Turab"
 4416 = "Labb"
 4417 = "Qastanyah"
 4419 = "Al-Madin"
@@ -238,6 +239,7 @@
 4438 = "Sanat Kisafar"
 4440 = "Narixa"
 4441 = "Istiyya"
+4442 = "Qasturra"
 4443 = "Furnuyulus"
 4452 = "Sanat Maryam"
 4456 = "Abdegas"
