@@ -8,6 +8,7 @@
 -Added an event option to contribute money and troops for a crusade
 -Fixed the Lombard League disbanding prematurely
 -Slightly buffed the Baltic orders and invasion countries
+-Changed a province name in Iberia, added a couple more DPNs there
 -Reworked Saint Gallen's NI set (contribution by primi)
 
 # v 2.0.3 #
